# snark

./: .gitignore  CMakeLists.txt  COPYING  README
actuators/: CMakeLists.txt
actuators/quickset/ptcr/: protocol.cpp
actuators/quickset/ptcr/test/: CMakeLists.txt
actuators/standa/: CMakeLists.txt
actuators/standa/applications/: CMakeLists.txt  README.md  config.json  standa-pan-tilt-control
actuators/universal_robots/applications/: ur-arm
actuators/wheels/test/: CMakeLists.txt
actuators/wheels/test/unit/: expected  input
audio/applications/: CMakeLists.txt  audio-sample.cpp
debian/: changelog  control  copyright  rules
geodesy/applications/: CMakeLists.txt  geo-calc.cpp  geotiff-cat  netcdf-cat
io/: CMakeLists.txt  video.cpp  video.h
io/applications/: CMakeLists.txt  video-cat.cpp
math/geometry/test/: CMakeLists.txt
navigation/mavlink/applications/: CMakeLists.txt
python/snark/: CMakeLists.txt  requirements.txt  setup.py
python/snark/examples/imaging/: image-intensity  image-stats
python/snark/imaging/applications/: CMakeLists.txt  image-intensity  image-watershed
python/snark/ros/: convert.py
python/snark/ros/detail/: command_line.py
python/snark/ros2/: convert.py
python/snark/snark/: __init__.py  version.py
python/snark/snark/imaging/: __init__.py  operations.py
python/snark/snark/imaging/cameras/: __init__.py  _pinhole.py  pinhole.py
python/snark/snark/imaging/cv/: __init__.py  impl.py
python/snark/snark/imaging/cv/types/: __init__.py  impl.py
python/snark/snark/imaging/examples/: image-stats
python/snark/snark/imaging/test/cv_image/iterator/: test
python/snark/snark/imaging/test/cv_image/zip_iterator/: test
python/snark/snark/math/: __init__.py  operations.py
python/snark/snark/ros/: __init__.py  convert.py
python/snark/snark/ros/test/convert/is_binary_type/: expected  input  test
python/snark/snark/ros2/: convert.py
python/snark/test/: expected  test
python/snark/test/imaging/cv/iterator/: test
python/snark/test/imaging/cv/zip_iterator/: test
python/snark/test/math/: strides_test.py
render/: CMakeLists.txt  colour.h  colour_map.cpp  colour_map.h  coloured.h  traits.h
render/colours/: map.cpp  map.h  named.h
render/svg/applications/: csv-to-svg.cpp
ros/: CMakeLists.txt  ros-cv-format.h  traits.h  version.h
ros/applications/: CMakeLists.txt  points-to-ros.cpp  ros-from-csv  ros-image.cpp  ros-points.cpp  ros-to-csv  ros2-from-csv  ros2-points.cpp  ros2-to-csv
ros/applications/detail/: pointcloud.h  ros-points-detail.h
ros/applications/test/ros-from-csv/: test
ros/applications/test/ros-image/signals/: config
ros/applications/test/ros-points/: test
ros/applications/test/ros-points/lio-sam/ascii/: input
ros/applications/test/ros-points/ouster/binary/: input
ros/applications/test/ros-points/to/: test
ros/applications/test/ros-points/to/ouster/: test
ros/detail/: ros-points-detail.h
ros/diagnostic_msgs/: CMakeLists.txt
ros/examples/detail/: publisher.h
ros/geometry_msgs/: CMakeLists.txt
ros/messages/diagnostic_msgs/: traits.h
ros/messages/geometry_msgs/: traits.h
ros/messages/nav_msgs/: traits.h
ros/messages/sensor_msgs/: traits.h
ros/messages/std_msgs/: traits.h
ros/nav_msgs/: CMakeLists.txt  traits.h
ros/rclcpp/: time.h
ros/ros1/: CMakeLists.txt
ros/ros1/applications/: CMakeLists.txt  ros-array.cpp  ros-image.cpp  ros-points.cpp  ros-to-csv
ros/ros1/applications/test/ros-from-csv/: test  yaml-to-path-value
ros/ros1/applications/test/ros-from-csv/helpers/: expected  input
ros/ros1/applications/test/ros-image/signals/: test
ros/ros1/examples/: rosbag-crop
ros/ros1/examples/detail/: publisher.h
ros/ros1/messages/diagnostic_msgs/: traits.h
ros/ros1/messages/geometry_msgs/: traits.h
ros/ros1/messages/sensor_msgs/: traits.h
ros/ros1/messages/std_msgs/: traits.h
ros/ros2/: CMakeLists.txt
ros/ros2/applications/: CMakeLists.txt  ros2-from-csv  ros2-image.cpp  ros2-points.cpp  ros2-to-csv
ros/ros2/applications/test/: config
ros/ros2/applications/test/ros2-from-csv/: msg-str-to-path-value  msg-to-path-value  test  yaml-to-path-value
ros/ros2/applications/test/ros2-from-csv/data/: input.csv
ros/ros2/applications/test/ros2-from-csv/helpers/: expected  input  input.msgs  test
ros/ros2/applications/test/ros2-image/latch/: expected  input  test
ros/ros2/applications/test/ros2-image/signals/: test
ros/ros2/applications/test/ros2-image/to-from/: expected  test
ros/ros2/applications/test/ros2-points/: test  test-fns
ros/ros2/applications/test/ros2-points/to/: test
ros/ros2/applications/test/ros2-to-csv/: test
ros/ros2/applications/test/ros2-to-csv/ascii/: expected  input  test
ros/ros2/rclcpp/: time.h
ros/sensor_msgs/: CMakeLists.txt
ros/std_msgs/: CMakeLists.txt
sensors/cameras/vimba/: CMakeLists.txt  attribute.cpp  attribute.h  camera.cpp  camera.h  error.cpp  error.h  frame.cpp  frame.h  frame_observer.cpp  frame_observer.h  system.cpp  system.h  traits.h  types.cpp  types.h
sensors/cameras/vimba/applications/: CMakeLists.txt  vimba-cat.cpp
sensors/lidars/innovusion/: CMakeLists.txt  inno_lidar_sdk.h  lidar.cpp  types.cpp  types.h  version.h  version.h.in
sensors/lidars/innovusion/applications/: CMakeLists.txt  app-base.h  innovusion-cat.cpp
sensors/lidars/innovusion/applications/v1/: app.h
sensors/lidars/innovusion/applications/v3/: app.h
sensors/lidars/innovusion/common/: lidar.cpp  lidar.h  log.h
sensors/lidars/innovusion/v1/: app.h  lidar.cpp  lidar.h  log.cpp  log.h  sdk_types.h  traits.h  types.cpp  types.h
sensors/lidars/innovusion/v3/: CMakeLists.txt  app.h  lidar.cpp  lidar.h  log.cpp  log.h  sdk_types.h  traits.h  types.cpp  types.h
sensors/lidars/ouster/test/: CMakeLists.txt  timestamp_test.cpp
sensors/lidars/ouster/test/data/: input-to-raw
sensors/lidars/ouster/test/data/api-v1/: config.json
sensors/lidars/ouster/test/data/api-v2/: config-32.json  config-64.json
signals/: CMakeLists.txt
signals/applications/: CMakeLists.txt  signals-cat.cpp
signals/pipeline/: record.cpp  record.h
(+541 files in other folders)
