cmake_minimum_required(VERSION 3.10) # 3.10 is required for rclcpp packages.
set( snark_ros_path "/opt/ros/${ROS_DISTRO}" ) # todo: review with Dave
set( snark_ros_cmake_pack "/opt/ros/${ROS_DISTRO}/cmake" ) # todo: review with Dave
find_package(rclcpp REQUIRED PATHS ${snark_ros_cmake_path} )
find_package(rmw REQUIRED PATHS ${snark_ros_cmake_path})
find_package(rosidl_generator_cpp REQUIRED PATHS ${snark_ros_cmake_path})
find_package(rosidl_typesupport_interface REQUIRED PATHS ${snark_ros_cmake_path})
find_package(rcl_interfaces REQUIRED PATHS ${snark_ros_cmake_path})
find_package(rosbag2_cpp REQUIRED PATHS ${snark_ros_cmake_path})

set( ros2_core_include_dirs ${rclcpp_INCLUDE_DIRS}  ${rmw_INCLUDE_DIRS}  ${rosidl_generator_cpp_INCLUDE_DIRS}  ${rosidl_typesupport_interface_INCLUDE_DIRS}  ${rcl_interfaces_INCLUDE_DIRS} )
set( ros2_extra_include_dirs ${rosbag2_cpp_INCLUDE_DIRS} )
set( ros2_core_libs ${rclcpp_LIBRARIES} ${rmw_LIBRARIES} ${rosbag2_cpp_LIBRARIES} ${rosidl_generator_cpp_LIBRARIES} ${rosidl_typesupport_interface_LIBRARIES} ${rcl_interfaces_LIBRARIES} )

# ROS2 does not define ROS_VERSION, so we define it here to make the macros in the c++ code
# make more sense & to allow us to have some form of backwards compatibility.
if ( $ENV{ROS_DISTRO} STREQUAL "ardent" )
    add_definitions( -DROS_VERSION_MAJOR=2 )
    add_definitions( -DROS_VERSION_MINOR=1 )
    add_definitions( -DROS_VERSION_PATCH=0 )
elseif ( $ENV{ROS_DISTRO} STREQUAL "bouncy" )
    add_definitions( -DROS_VERSION_MAJOR=2 )
    add_definitions( -DROS_VERSION_MINOR=2 )
    add_definitions( -DROS_VERSION_PATCH=0 )
elseif ( $ENV{ROS_DISTRO} STREQUAL "crystal" )
    add_definitions( -DROS_VERSION_MAJOR=2 )
    add_definitions( -DROS_VERSION_MINOR=3 )
    add_definitions( -DROS_VERSION_PATCH=0 )
elseif ( $ENV{ROS_DISTRO} STREQUAL "dashing" )
    add_definitions( -DROS_VERSION_MAJOR=2 )
    add_definitions( -DROS_VERSION_MINOR=4 )
    add_definitions( -DROS_VERSION_PATCH=0 )
elseif ( $ENV{ROS_DISTRO} STREQUAL "eloquent" )
    add_definitions( -DROS_VERSION_MAJOR=2 )
    add_definitions( -DROS_VERSION_MINOR=5 )
    add_definitions( -DROS_VERSION_PATCH=0 )
elseif ( $ENV{ROS_DISTRO} STREQUAL "foxy" )
    add_definitions( -DROS_VERSION_MAJOR=2 )
    add_definitions( -DROS_VERSION_MINOR=6 )
    add_definitions( -DROS_VERSION_PATCH=0 )
elseif ( $ENV{ROS_DISTRO} STREQUAL "galactic" )
    add_definitions( -DROS_VERSION_MAJOR=2 )
    add_definitions( -DROS_VERSION_MINOR=7 )
    add_definitions( -DROS_VERSION_PATCH=0 )
elseif ( $ENV{ROS_DISTRO} STREQUAL "humble" )
    add_definitions( -DROS_VERSION_MAJOR=2 )
    add_definitions( -DROS_VERSION_MINOR=8 )
    add_definitions( -DROS_VERSION_PATCH=0 )
elseif ( $ENV{ROS_DISTRO} STREQUAL "iron" )
    add_definitions( -DROS_VERSION_MAJOR=2 )
    add_definitions( -DROS_VERSION_MINOR=9 )
    add_definitions( -DROS_VERSION_PATCH=0 )
elseif ( $ENV{ROS_DISTRO} STREQUAL "jazzy" )
    add_definitions( -DROS_VERSION_MAJOR=2 )
    add_definitions( -DROS_VERSION_MINOR=10 )
    add_definitions( -DROS_VERSION_PATCH=0 )
endif()

if( snark_BUILD_APPLICATIONS )
    add_subdirectory( applications )
endif( snark_BUILD_APPLICATIONS )
